# Building-RAG-Pipeline-From-Scratch

./: README.md  main.py  pyproject.toml  requirements.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdf_loader.ipynb
