[project]
name = "building-rag-pipeline-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.4.22",
    "faiss-cpu>=1.7.4",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.0.26",
    "langchain-core>=0.1.35",
    "langchain-groq>=0.3.8",
    "pymupdf>=1.23.22",
    "pypdf>=3.17.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=2.2.2",
]
